Update layout keybindings

--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -16,9 +16,6 @@ bindsym $mod+space exec $menu
 ## Launch // Command Launcher // <> b ## bemenu
 bindsym $mod+b exec $BIN_DIR/bemenu-run.sh dmenu | xargs swaymsg exec
 
-## Launch // Toggle Gammastep // <><Shift> t ##
-bindsym $mod+Shift+t exec pkill -USR1 gammastep
-
 ## Launch // Floating terminal // <Menu> ##
 bindsym Menu exec swaymsg "[title=$criteria] scratchpad show" || alacritty -t $criteria
 
@@ -54,7 +51,7 @@ bindsym $mod+p exec brave --enable-features=UseOzonePlatform --ozone-platform=wa
 #bindsym XF86Favorites exec
 
 ## Launch // Show Keypresses // <><Shift> s ##
-bindsym $mod+Shift+s exec $BIN_DIR/toggle-program.sh wshowkeys
+bindsym $mod+Shift+e exec $BIN_DIR/toggle-program.sh wshowkeys
 
 ## Launch // Clipboard manager // <> y ##
 bindsym $mod+y exec clipman pick -t CUSTOM --tool-args="bemenu-run.sh -l 30 -p Clipboard"
@@ -155,10 +152,10 @@ bindsym $mod+$alt+0 move container to workspace $ws10; workspace $ws10
 bindsym $mod+s move left; move right; layout stacking
 
 ## Modify // Window Layout tabbed // <> w ##
-bindsym $mod+w move left; move right; layout tabbed
+bindsym $mod+t move left; move right; layout tabbed
 
 ## Modify // Window Layout toggle split // <> e ##
-bindsym $mod+Shift+e move left; move right; layout toggle split
+bindsym $mod+Shift+s move left; move right; layout toggle split
 
 ## Modify // Window Fullscreen Toggle // <> f ##
 bindsym $mod+f fullscreen
