--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -148,14 +148,14 @@ bindsym $mod+$alt+0 move container to workspace $ws10; workspace $ws10
 # Because of this the layout only changes for the selected window and not for all windows if no layout is set, which is default in sway.
 # To restore the "original behaviour", the layout needs to be reset before changing it.
 # "Move"ing the windows first, resets the layout.
-## Modify // Window Layout stacking // <> s ##
-bindsym $mod+s move left; move right; layout stacking
+## Modify // Window Layout stacking // <><Shift> s ##
+bindsym $mod+Shift+s move left; move right; layout stacking
 
 ## Modify // Window Layout tabbed // <> w ##
 bindsym $mod+t move left; move right; layout tabbed
 
-## Modify // Window Layout toggle split // <> e ##
-bindsym $mod+Shift+s move left; move right; layout toggle split
+## Modify // Window Layout toggle split // <> s ##
+bindsym $mod+s move left; move right; layout toggle split
 
 ## Modify // Window Fullscreen Toggle // <> f ##
 bindsym $mod+f fullscreen
