Add fix for brave app keyboard capture

--- a/config/sway/sway.d/01_general.conf
+++ b/config/sway/sway.d/01_general.conf
@@ -39,6 +39,9 @@ set $lock $BIN_DIR/lock.sh
 for_window [class="^.*"] inhibit_idle fullscreen
 for_window [app_id="^.*"] inhibit_idle fullscreen
 
+# Bugfix keyboard capture issue in Chromium browsers. https://github.com/brave/brave-browser/issues/23601
+for_window [app_id="^brave-.*-.*$"] shortcuts_inhibitor disable
+
 # Focus window when mouse hovers it
 focus_follows_mouse no
 
